# js-run-devserver-repro-two

./: .bazelignore  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/foo-app/: index.html  package.json  tsconfig.json  vite.config.mjs
apps/foo-app/src/: App.tsx  SideEffect.tsx
bazel/: defs.bzl
bazel/typescript/: defs.bzl
