bazel_dep(name = "aspect_bazel_lib", version = "2.7.7")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# aspect_rules_js
# --------------------------------------------------------------------------------
bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc6")

# rules_nodejs
# --------------------------------------------------------------------------------
bazel_dep(name = "rules_nodejs", version = "6.2.0")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.14.0")
use_repo(node, "nodejs_toolchains")

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    lifecycle_hooks = {},
    npmrc = ".npmrc",
    patch_args = {"*": ["-p1"]},
    pnpm_lock = "//:pnpm-lock.yaml",
    npm_package_target_name = "{dirname}",
)
use_repo(npm, "npm")

# aspect_rules_ts
# --------------------------------------------------------------------------------
bazel_dep(name = "aspect_rules_ts", version = "3.0.0-rc0")
rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "@npm//:typescript/resolved.json",
)
use_repo(rules_ts_ext, "npm_typescript")
